--- a/src/components/SearchNav/searchNav.scss
+++ b/src/components/SearchNav/searchNav.scss
@@ -38,11 +38,6 @@
     }
   }
 
-  p {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
 
   li, p {
     font-size: 15px;
@@ -74,6 +69,12 @@
     .cart-wrapper {
       display: flex;
       gap: 25px;
+
+      div{
+        display: flex;
+        gap: 6px;
+        align-items: center;
+      }
     }
   }
   
