--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -48,11 +48,15 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+
 }
 
-
-
-
+@media screen and (max-width: 768px) {
+  .header{
+    display: none;
+  }
+}
 
 
 
