--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -9,7 +9,11 @@
     justify-content: space-around;
     margin: 0 auto;
     padding: 0 20px;
-
+    flex-wrap: wrap;
+    row-gap: 30px;
+    @media screen and (max-width: 768px) {
+      justify-content: start;
+    }
     .footer-section {
       padding: 0 30px;
       max-width: 300px;
