--- a/src/components/ProductCard/productCard.scss
+++ b/src/components/ProductCard/productCard.scss
@@ -3,7 +3,11 @@
   margin-top: 20px;
   background-color: #f5f5f5;
   border-radius: 10px;
-
+  &:hover {
+    transform: translateY(-10px);
+    transition: 0.4s ease-in-out;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
   img {
     width: 100%;
     height: 200px;
