--- a/src/components/SearchNav/searchNav.scss
+++ b/src/components/SearchNav/searchNav.scss
@@ -5,14 +5,23 @@
   margin-top: 20px;
   margin-bottom: 30px;
 
+  .menu-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 500;
+
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+  }
+
   div {
     display: flex;
     align-items: center;
   }
 
   .logo-wrapper {
-
-
     img {
       width: 50px;
       height: 50px;
@@ -29,15 +38,13 @@
     display: flex;
     align-items: center;
     gap: 30px;
-
+margin-right: 60px;
     li {
       display: flex;
       align-items: center;
       gap: 6px;
-
     }
   }
-
 
   li, p {
     font-size: 15px;
@@ -62,7 +69,6 @@
         border: none;
         background-color: #dadfe7;
         font-size: 13px;
-
       }
     }
 
@@ -70,12 +76,60 @@
       display: flex;
       gap: 25px;
 
-      div{
+      div {
         display: flex;
         gap: 6px;
         align-items: center;
       }
     }
   }
-  
+
+  @media screen and (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+
+    }
+
+    .nav-links {
+      display: none;
+
+      &.open {
+        display: block;
+        position: absolute;
+        background-color: white;
+        top: 10%;
+        left: 0;
+        width: 100%;
+        padding: 30px;
+      }
+
+      ul {
+        flex-direction: column;
+        gap: 20px;
+
+        li {
+          display: block;
+        }
+      }
+    }
+
+    .search-cart-wrapper {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+
+
+      .search-bar {
+        width: 100%;
+      }
+
+      .cart-wrapper {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-right: 60px;
+      }
+    }
+  }
 }
