--- a/src/components/SingleProduct/singleProduct.scss
+++ b/src/components/SingleProduct/singleProduct.scss
@@ -4,6 +4,26 @@
     border: 1px solid lightgray;
   }
 
+  .back-button {
+    padding: 6px 20px;
+    margin-top: 15px;
+    border-radius: 16px;
+    border: none;
+    font-size: 15px;
+    background-color: var(--primary-color);
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+
+    &:hover {
+      svg {
+        transform: translateX(-5px);
+        transition: .3s ease-in-out;
+      }
+    }
+  }
+
   .single-title {
     display: flex;
     gap: 5px;
@@ -118,6 +138,9 @@
           padding: 10px 40px;
           font-weight: 500;
           border-radius: 20px;
+          @media screen and (max-width: 768px) {
+            padding: 8px 25px;
+          }
         }
 
         .filled-btn {
